# Egg-Game

./: .gitignore  Cargo.toml  README.md  build-web.sh  build.rs  game.tic  game.wasmp
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: game.manifest
assets/data/: data.toml  game.eggdata  main.eggscene
assets/map/: bank1.json  bank2.json  office.json  tiles.json
assets/maps/: backyard.tmj  bank1.tmj  bank2.tmj  bedroom.tmj  bedroom1.tmj  class1.tmj  collision.tsj  hall1.tmj  hall2.tmj  house_kitchen.tmj  house_living_room.tmj  house_stairwell.tmj  office.tmj  office_backup.tmj  office_stairway.tmj  piano_room.tmj  shallot.tmj  supermarket.tmj  supermarket_bathroom.tmj  supermarket_hall.tmj  supermarket_storeroom.tmj  test_pen.tmj  tiles.tsj  town.tmj  wilderness.tmj
assets/script/: en.eggtext  en.json
assets/sprites/: sheet.png~
crates/egg_editor/: Cargo.toml
crates/egg_editor/src/: text.rs
crates/egg_editor/src/map/: dock.rs  draw.rs  history.rs  layers.rs  mod.rs  modal.rs  objects.rs  panels.rs  scroll.rs  step.rs  tools.rs  walk_editor.rs
crates/egg_game_headless/: Cargo.toml
crates/egg_game_headless/src/: harness.rs  lib.rs  main.rs
crates/egg_platform/: Cargo.toml
crates/egg_platform/src/: audio.rs  consts.rs  input.rs  lib.rs  null_console.rs  scancode.rs  sound.rs
crates/egg_render/: Cargo.toml
crates/egg_render/src/: canvas.rs  font.rs  geometry.rs  image.rs  lib.rs  options.rs  sheet.rs
crates/egg_ui/: Cargo.toml
crates/egg_ui/src/: dialogue.rs  layout.rs  lib.rs  portrait.rs  text_field.rs
crates/egg_world/: Cargo.toml
crates/egg_world/src/: draw_state.rs  lib.rs  rand.rs
crates/egg_world/src/data/: eggdata.rs  metasprite.rs  mod.rs  portraits.rs  save.rs  scene.rs  sound.rs  tiled.rs  validate.rs
crates/egg_world/src/data/script/: eggtext.rs  message.rs  mod.rs
crates/egg_world/src/world/: animation.rs  camera.rs  interact.rs  map.rs  mod.rs  particles.rs  player.rs
egg_core/: Cargo.toml  README.md
egg_core/src/: animation.rs  camera.rs  debug.rs  dialogue.rs  draw_state.rs  drawstate.rs  geometry.rs  interact.rs  lib.rs  map.rs  packed.rs  particles.rs  player.rs  position.rs  rand.rs  system.rs  ui.rs
egg_core/src/data/: dialogue_data.rs  eggdata.rs  eggscene.rs  eggtext.rs  map_data.rs  metasprite.rs  mod.rs  portraits.rs  save.rs  scene.rs  script.rs  sound.rs  sprite_flags.rs  tiled.rs  tmj.rs
egg_core/src/data/script/: eggtext.rs  message.rs  mod.rs
egg_core/src/editor/: mod.rs  text.rs
egg_core/src/editor/map/: dock.rs  draw.rs  history.rs  layers.rs  mod.rs  modal.rs  objects.rs  panels.rs  step.rs  tools.rs  walk_editor.rs
egg_core/src/gamestate/: debug.rs  intro.rs  inventory.rs  mapeditor.rs  menu.rs  mod.rs  scrubber.rs  sprite_test.rs  text_field.rs  texteditor.rs  walkaround.rs
egg_core/src/gamestate/mapeditor/: dock.rs  mod.rs
egg_core/src/gamestate/walkaround/: creatures.rs  cutscene.rs  inventory.rs  mod.rs
egg_core/src/platform/: audio.rs  input.rs  mod.rs  null_console.rs  scancode.rs  scrub_console.rs
egg_core/src/render/: canvas.rs  font.rs  mod.rs  options.rs  sheet.rs
egg_core/src/system/: api.rs  consts.rs  drawing.rs  font.rs  image.rs  input.rs  mod.rs  scancode.rs  test_console.rs  tilemap.rs  types.rs
egg_core/src/system/drawing/: font.rs  mod.rs  sheet.rs
egg_core/src/ui/: dialogue.rs  layout.rs  mod.rs  portrait.rs  text_field.rs
egg_core/src/world/: animation.rs  camera.rs  interact.rs  map.rs  mod.rs  particles.rs  player.rs
egg_core/tests/: asset_cross_reference.rs  warp_destinations.rs
egg_core/tic80_api/src/: lib.rs
egg_core/tic80_api/src/core/: mod.rs
egg_core/tic80_api/src/helpers/: input_manager.rs  mod.rs
egg_game_bevy/: Cargo.toml
egg_game_tic80/: Cargo.toml
egg_game_tic80/src/: alloc.rs  lib.rs
src/: alloc.rs  animation.rs  base64.rs  camera.rs  dialogue.rs  dialogue_data.rs  fantasy_console.rs  gamestate.rs  headless.rs  hot_reload.rs  hotkeys.rs  input_manager.rs  interact.rs  inventory.rs  lib.rs  main.rs  map.rs  map_data.rs  packed.rs  particles.rs  player.rs  portraits.rs  position.rs  rand.rs  save.rs  script_asset.rs  sound.rs  tic80.rs  tic_helpers.rs  tiled.rs  views.rs  walkaround.rs
src/data/: map_data.rs  save.rs
src/fantasy_console/: drawing.rs  image.rs
src/gamestate/: intro.rs  inventory.rs  menu.rs  mod.rs  walkaround.rs
src/gamestate/walkaround/: creatures.rs  cutscene.rs
src/tic80_core/: alloc.rs  mod.rs
src/tic80_helpers/: input_manager.rs  mod.rs
tic80_api/: Cargo.toml
tic80_api/src/core/: mod.rs
tic80_api/src/helpers/: input_manager.rs  mod.rs
web/: index.html
