[package]
name = "egg_game_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
tiny-skia = "0.11.1"
egg_core = { path = "egg_core" }
serde = "1.0.173"
serde_json = "1.0.103"

[workspace]

members = [
    "egg_core",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
