[package]
name = "egg_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
taffy = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.103"
toml = "1"
egg_render = { path = "../crates/egg_render" }
