[package]
name = "egg_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.103"
egg_render = { path = "../crates/egg_render" }
egg_platform = { path = "../crates/egg_platform" }
egg_world = { path = "../crates/egg_world" }
egg_ui = { path = "../crates/egg_ui" }

[dev-dependencies]
# Pull in egg_platform's `test-util` feature so the crate's test suite can reach
# the shared `platform::test_console::TestConsole` fixture (a dependency's
# `#[cfg(test)]` items aren't visible when the dependent is under test).
egg_platform = { path = "../crates/egg_platform", features = ["test-util"] }
