[package]
name = "egg_game_tic80"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
buddy-alloc = { version = "0.4.1", optional = true }
once_cell = "1.17.0"
tic80_api = { path = "../tic80_api" }
egg_core = { path = "../egg_core" }

[profile.release]
# opt-level = 0
opt-level = "z"
debug = 0
lto = true
strip = true
codegen-units = 1

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]
reimplement_mget = []
